@@ -73,9 +73,6 @@ import ebmlib
 # Global Variables
 ID_UPDATE_CHECK = wx.NewId()
 
-# Commands (here temporarily)
-APP_CMD_OPEN_WINDOW = u"Editra.OpenWindow"
-
 _ = wx.GetTranslation
 #--------------------------------------------------------------------------#
 
@@ -112,9 +109,8 @@ class Editra(wx.App, events.AppEventHandlerMixin):
                     args = list()
                     opts = dict()
 
-                if not len(args):
-                    args.append(APP_CMD_OPEN_WINDOW)
-                else:
+                exml = ed_ipc.IPCCommand()
+                if len(args):
                     # TODO: move to serialize all args as xml
                     nargs = list()
                     for p in args:
@@ -123,10 +119,11 @@ class Editra(wx.App, events.AppEventHandlerMixin):
                         except:
                             pass
                         nargs.append(p)
-                    args = nargs
+                    exml.SetFiles(nargs)
+                exml.SetArgs(opts.items())
 
                 # TODO: need to process other command line options as well i.e) -g
-                rval = ed_ipc.SendCommands(args, profiler.Profile_Get('SESSION_KEY'))
+                rval = ed_ipc.SendCommands(exml, profiler.Profile_Get('SESSION_KEY'))
                 # If sending the command failed then let the editor startup
                 # a new instance
                 if not rval:
@@ -401,6 +398,28 @@ class Editra(wx.App, events.AppEventHandlerMixin):
         """
         self._lock = True
 
+    def OpenFile(self, filename, line=-1):
+        """Open a file in the currently active window
+        @param filename: file path
+        @keyword line: int
+
+        """
+        window = self.GetTopWindow()
+        if isinstance(window, ed_main.MainWindow):
+            try:
+                encoding = sys.getfilesystemencoding()
+                window.DoOpen(ed_glob.ID_COMMAND_LINE_OPEN,
+                              ed_txt.DecodeString(filename, encoding),
+                              line)
+
+                # Make sure the window is brought to the front
+                if window.IsIconized():
+                    window.Iconize(False)
+                window.Raise()
+            except Exception, msg:
+                self._log("[app][err] Failed to open drop file: %s" % str(msg))
+                pass
+
     def MacNewFile(self):
         """Stub for future use"""
         pass
@@ -413,24 +432,8 @@ class Editra(wx.App, events.AppEventHandlerMixin):
         @postcondition: if L{MainWindow} is open file will be opened in notebook
 
         """
-        window = self.GetTopWindow()
-        if getattr(window, '__name__', '') == "MainWindow":
-            try:
-                self._log("[app][info] MacOpenFile Fired")
-                encoding = sys.getfilesystemencoding()
-                window.DoOpen(ed_glob.ID_COMMAND_LINE_OPEN,
-                              ed_txt.DecodeString(filename, encoding))
-
-                # Make sure the window is brought to the front
-                if window.IsIconized():
-                    window.Iconize(False)
-                window.Raise()
-
-            except Exception, msg:
-                self._log("[app][err] Failed to open drop file: %s" % str(msg))
-                pass
-        else:
-            pass
+        self._log("[app][info] MacOpenFile Fired")
+        self.OpenFile(filename, line=-1)
 
     def MacPrintFile(self, filename):
         """Stub for future use
@@ -512,23 +515,23 @@ class Editra(wx.App, events.AppEventHandlerMixin):
 
         """
         cmds = evt.GetCommands()
-        for cmdstr in cmds:
-            if u"::" in cmdstr:
-                target, cmd = cmdstr.split(u"::")
-                if target == u"Cmd.EditraStc":
-                    cbuf = self.GetCurrentBuffer()
-                    if cbuf is not None and hasattr(cbuf, cmd):
-                        try:
-                            getattr(cbuf, cmd)()
-                        except:
-                            self._log("[app][err] Invalid Command %s" % cmdstr)
+        if isinstance(cmds, ed_ipc.IPCCommand):
+            if not len(cmds.GetFiles()):
+                self.OpenNewWindow()
             else:
-                if cmdstr == APP_CMD_OPEN_WINDOW:
-                    self.OpenNewWindow()
-                elif len(cmdstr):
-                    self.MacOpenFile(cmdstr)
-                else:
-                    self._log("[app][warn] Unknown Command %s" % cmdstr)
+                # TODO: change goto line handling to require one
+                #       arg per file specified on the comand line
+                #       i.e) -g 23,44,100
+                line = -1
+                for arg, val in cmds.GetArgs():
+                    if arg == '-g':
+                        line = val
+                        if line > 0:
+                            line -= 1
+                        break
+
+                for fname in cmds.GetFiles():
+                    self.OpenFile(fname, line)
 
     def OnCloseWindow(self, evt):
         """Close the currently active window
